Ensure spacing to bottom of tickets

--- a/_sass/event/_buy-ticket.scss
+++ b/_sass/event/_buy-ticket.scss
@@ -11,6 +11,7 @@
     border-radius: 5px;
     transition: all  0.3s ease-in-out;
     box-shadow: 0 10px 25px 0 rgba($heading-color, 0.1);
+    margin-bottom: 15px !important;
 
     &:hover {
       //transform: scale(1.05);
